add crud menus
