# engine/route.go
@@ -7,21 +7,25 @@ import (
 )
 
 // @Tags Api Version
-// API Version : passing specific parameter to DBaaS from Service Portal
+// API Version : passing specific parameter to DBaaS from Service
 // @Accept  json
 // @Produce  json
 // @Success 200 {object} engine.ResponseSuccess
 // @Failure 400 {object} engine.ResponseStatus
 // / @Failure 404 {object} engine.ResponseStatus
 // / @Failure 500 {object} engine.ResponseStatus
-// @Router /version [get]
+// @Router /api/v1/version [get]
 func ApiVersion(c *gin.Context) {
 	c.JSON(http.StatusOK, "")
 }
 
 // @Tags Roles
-// API Roles : passing specific parameter to DBaaS from Service Portal
+// API Roles : passing specific parameter to DBaaS from Service
 // @Security BearerAuth
+// @Param limit query integer false "Limit Per Page"
+// @Param page query integer false "Page Number"
+// @Param sort query string false "Sort By {ex: created_at asc | desc}"
+// @Param id.equals query string false "Seraching by column {ex: id} action {ex: equals | contains | in}"
 // @Accept  json
 // @Produce  json
 // @Router /api/v1/roles [get]
@@ -30,7 +34,7 @@ func IndexRoles(c *gin.Context) {
 }
 
 // @Tags Roles
-// API Roles : passing specific parameter to DBaaS from Service Portal
+// API Roles : passing specific parameter to DBaaS from Service
 // @Security BearerAuth
 // @Param filter body engine.Role true "Pass session information to DBaaS Parameter"
 // @Accept  json
@@ -41,7 +45,7 @@ func CreateRoles(c *gin.Context) {
 }
 
 // @Tags Roles
-// API Roles : passing specific parameter to DBaaS from Service Portal
+// API Roles : passing specific parameter to DBaaS from Service
 // @Security BearerAuth
 // @Param id path string true "Pass session information to DBaaS Parameter"
 // @Accept  json
@@ -52,7 +56,7 @@ func ShowRoles(c *gin.Context) {
 }
 
 // @Tags Roles
-// API Roles : passing specific parameter to DBaaS from Service Portal
+// API Roles : passing specific parameter to DBaaS from Service
 // @Security BearerAuth
 // @Param id path string true "Pass session information to DBaaS Parameter"
 // @Param filter body engine.Role true "Pass session information to DBaaS Parameter"
@@ -64,7 +68,7 @@ func UpdateRoles(c *gin.Context) {
 }
 
 // @Tags Roles
-// API Roles : passing specific parameter to DBaaS from Service Portal
+// API Roles : passing specific parameter to DBaaS from Service
 // @Security BearerAuth
 // @Param id path string true "Pass session information to DBaaS Parameter"
 // @Accept  json
@@ -75,7 +79,12 @@ func DeleteRoles(c *gin.Context) {
 }
 
 // @Tags Menus
-// API Menus : passing specific parameter to DBaaS from Service Portal
+// API Menus : passing specific parameter to DBaaS from Service
+// @Security BearerAuth
+// @Param limit query integer false "Limit Per Page"
+// @Param page query integer false "Page Number"
+// @Param sort query string false "Sort By {ex: created_at asc | desc}"
+// @Param id.equals query string false "Seraching by column {ex: id} action {ex: equals | contains | in}"
 // @Accept  json
 // @Produce  json
 // @Router /api/v1/menus [get]
@@ -84,7 +93,9 @@ func IndexMenus(c *gin.Context) {
 }
 
 // @Tags Menus
-// API Menus : passing specific parameter to DBaaS from Service Portal
+// API Menus : passing specific parameter to DBaaS from Service
+// @Security BearerAuth
+// @Param filter body engine.Menu true "Pass session information to DBaaS Parameter"
 // @Accept  json
 // @Produce  json
 // @Router /api/v1/menus [post]
@@ -93,7 +104,9 @@ func CreateMenus(c *gin.Context) {
 }
 
 // @Tags Menus
-// API Menus : passing specific parameter to DBaaS from Service Portal
+// API Menus : passing specific parameter to DBaaS from Service
+// @Security BearerAuth
+// @Param id path string true "Pass session information to DBaaS Parameter"
 // @Accept  json
 // @Produce  json
 // @Router /api/v1/menus/{id} [get]
@@ -102,7 +115,10 @@ func ShowMenus(c *gin.Context) {
 }
 
 // @Tags Menus
-// API Menus : passing specific parameter to DBaaS from Service Portal
+// API Menus : passing specific parameter to DBaaS from Service
+// @Security BearerAuth
+// @Param id path string true "Pass session information to DBaaS Parameter"
+// @Param filter body engine.Menu true "Pass session information to DBaaS Parameter"
 // @Accept  json
 // @Produce  json
 // @Router /api/v1/menus/{id} [put]
@@ -111,10 +127,71 @@ func UpdateMenus(c *gin.Context) {
 }
 
 // @Tags Menus
-// API Menus : passing specific parameter to DBaaS from Service Portal
+// API Menus : passing specific parameter to DBaaS from Service
+// @Security BearerAuth
+// @Param id path string true "Pass session information to DBaaS Parameter"
 // @Accept  json
 // @Produce  json
 // @Router /api/v1/menus/{id} [delete]
 func DeleteMenus(c *gin.Context) {
+	c.JSON(http.StatusOK, "")
+}
+
+// @Tags Users
+// API Users : passing specific parameter to DBaaS from Service
+// @Security BearerAuth
+// @Param limit query integer false "Limit Per Page"
+// @Param page query integer false "Page Number"
+// @Param sort query string false "Sort By {ex: created_at asc | desc}"
+// @Param id.equals query string false "Seraching by column {ex: id} action {ex: equals | contains | in}"
+// @Accept  json
+// @Produce  json
+// @Router /api/v1/users [get]
+func IndexUsers(c *gin.Context) {
+	c.JSON(http.StatusOK, "")
+}
+
+// @Tags Users
+// API Users : passing specific parameter to DBaaS from Service
+// @Security BearerAuth
+// @Param filter body engine.User true "Pass session information to DBaaS Parameter"
+// @Accept  json
+// @Produce  json
+// @Router /api/v1/users [post]
+func CreateUsers(c *gin.Context) {
+	c.JSON(http.StatusOK, "")
+}
+
+// @Tags Users
+// API Users : passing specific parameter to DBaaS from Service
+// @Security BearerAuth
+// @Param id path string true "Pass session information to DBaaS Parameter"
+// @Accept  json
+// @Produce  json
+// @Router /api/v1/users/{id} [get]
+func ShowUsers(c *gin.Context) {
+	c.JSON(http.StatusOK, "")
+}
+
+// @Tags Users
+// API Users : passing specific parameter to DBaaS from Service
+// @Security BearerAuth
+// @Param id path string true "Pass session information to DBaaS Parameter"
+// @Param filter body engine.User true "Pass session information to DBaaS Parameter"
+// @Accept  json
+// @Produce  json
+// @Router /api/v1/users/{id} [put]
+func UpdateUsers(c *gin.Context) {
+	c.JSON(http.StatusOK, "")
+}
+
+// @Tags Users
+// API Users : passing specific parameter to DBaaS from Service
+// @Security BearerAuth
+// @Param id path string true "Pass session information to DBaaS Parameter"
+// @Accept  json
+// @Produce  json
+// @Router /api/v1/users/{id} [delete]
+func DeleteUsers(c *gin.Context) {
 	c.JSON(http.StatusOK, "")
 }
